--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,15 +1,29 @@
-name: Generate Snake
+name: Snake
 on:
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
+  push:
+    branches:
+      - main
+
 jobs:
-  generate:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@master
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Generate Snake
+        uses: Platane/snk@master
         with:
           github_user_name: HanzlaSarwar327
-          svg_path: github-contribution-grid-snake.svg
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          outputs: |
+            dist/github-snake.svg
+      
+      - name: Commit
+        run: |
+          git config --global user.name "GitHub Actions"
+          git add dist/github-snake.svg
+          git commit -m "Update snake"
+          git push
