--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,29 +1,9 @@
-name: Snake
-on:
-  schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      
-      - name: Generate Snake
-        uses: Platane/snk@master
-        with:
-          github_user_name: HanzlaSarwar327
-          outputs: |
-            dist/github-snake.svg
-      
-      - name: Commit
+      - name: Commit & Push Snake Animation
         run: |
           git config --global user.name "GitHub Actions"
-          git add dist/github-snake.svg
-          git commit -m "Update snake"
+          git config --global user.email "actions@github.com"
+          git add dist/github-snake.svg || echo "No changes to commit"
+          git commit -m "Update snake animation" || exit 0
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
