--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,3 +1,9 @@
+      - name: Generate Snake
+        uses: Platane/snk@v2
+        with:
+          github_user_name: HanzlaSarwar327
+          outputs: dist/github-snake.svg
+
       - name: Commit & Push Snake Animation
         run: |
           git config --global user.name "GitHub Actions"
