--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,8 +1,30 @@
+name: Generate Snake Animation
+
+on:
+  schedule:
+    - cron: '0 0 * * *'  # Trigger every day at midnight (adjust as needed)
+  push:
+    branches:
+      - main
+
+jobs:
+  generate_snake:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Create dist directory
+        run: mkdir -p dist
+
       - name: Generate Snake
         uses: Platane/snk@v2
         with:
           github_user_name: HanzlaSarwar327
           outputs: dist/github-snake.svg
+
+      - name: Check if SVG was generated
+        run: ls dist
 
       - name: Commit & Push Snake Animation
         run: |
