--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,40 +1,15 @@
-name: Generate Snake Animation
+name: Test Snake Workflow
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # Trigger every day at midnight (adjust as needed)
   push:
     branches:
       - main
 
 jobs:
-  generate_snake:
+  test_job:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Debug inputs
+      - name: Print GitHub User Name
         run: echo "GitHub User Name: ${{ github.actor }}"
-
-      - name: Create dist directory
-        run: mkdir -p dist
-
-      - name: Generate Snake
-        uses: Platane/snk@v1  # Switch to v1 if v2 is causing issues
-        with:
-          github_user_name: HanzlaSarwar327
-          outputs: dist/github-snake.svg
-
-      - name: Check if SVG was generated
-        run: ls dist
-
-      - name: Commit & Push Snake Animation
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add dist/github-snake.svg || echo "No changes to commit"
-          git commit -m "Update snake animation" || exit 0
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
